# src/modules/imut/imut.controller.js
@@ -1,0 +1,9 @@
+const bknClient = require('../../helpers/bknClient');
+
+class ImutController {
+  async getListUsulan(req, res) {
+    return bknClient.forward(req, res, '/imut/simpeg/usulan/list');
+  }
+}
+
+module.exports = new ImutController();
